# ai-invoice-auditor

./: .env.example  .gitignore  AGENTS.md  PS.md  PSS.md  agents.md  inspect.sh  main.py  pyproject.toml  run.sh  scripts.md
config/: config.yaml  persona_invoice_agent.yaml  rules.yaml
docs/: plan.md
mock_records/: data_manager.py
src/: main.py  manual_run.py  test_erp_mcp.py  test_rag_mcp.py  test_translation_with_meta.py
src/adk_agents/translator/: main.py  schemas.py  service.py
src/agents/: extractor.py  monitor.py
src/core/: config.py  exceptions.py  logger.py  mock_data_loader.py  prompts.py  protocol.py  state.py  utils.py
src/database/: qdrant_db.py
src/mcp_server/: erp.py  rag.py
src/prompts/: rag_answer.txt
src/rag_engine/: agents.py  schema.py  tools.py
src/tests/: run_system_check.py
src/tools/: ocr_engine.py
src/workflows/: graph.py  nodes.py
