[project]
name = "ai-invoice-auditor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.7",
    "httpx>=0.28.1",
    "langchain>=1.1.0",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.4",
    "litellm>=1.80.7",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.16.1",
    "uvicorn>=0.38.0",
]
