[project]
name = "ai-invoice-auditor"
version = "0.1.0"
description = "Enterprise Agentic AI Invoice Auditor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "langgraph>=0.0.26",
    "langchain>=0.1.12",
    "langchain-core>=0.1.30",
    "langchain-community>=0.0.28",
    "qdrant-client>=1.8.0",
    "litellm>=1.34.0",
    "loguru>=0.7.2",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "fpdf2>=2.7.8",
    "rich>=13.7.1",
    "langfuse>=2.20.0",
    "mcp>=0.1.0",
    "ragas>=0.1.0",
    "pymupdf>=1.23.26",
    "pandas>=2.2.0",
    "streamlit>=1.32.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0"
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true